--- a/docs/visual-basic/misc/bc30995.md
+++ b/docs/visual-basic/misc/bc30995.md
@@ -1,5 +1,5 @@
 ---
-title: 선행 &#39;합니다. &#39; 또는 &#39;! &#39; 상수 식에 나타날 수 없습니다
+title: 선행 &#39;입니다. &#39; 또는 &#39;! &#39; 는 상수 식에 표시할 수 없습니다.
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30995
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC30995
 ms.assetid: eed62684-66db-4fdb-9da7-f1407a55b172
-ms.openlocfilehash: b209fa721faa3d04d5a63a69340dd75f38df127b
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: cd2959fc33bd6fdaa59393c325fd309f26e21601
+ms.sourcegitcommit: a368166a51e5204c0224fbf5e46476e3ed122817
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33619082"
+ms.lasthandoff: 08/31/2018
+ms.locfileid: "43331904"
 ---
-# <a name="leading-3939-or-3939-cannot-appear-in-a-constant-expression"></a>선행 &#39;합니다. &#39; 또는 &#39;! &#39; 상수 식에 나타날 수 없습니다
-멤버 액세스 (.) 및 사전 멤버 액세스 (!) 대부분의 경우 상수 식을 포함 하는 멤버를 포함 하는 요소를 지정 하는 식이 필요 합니다. 다음 선언은 올바르지 않습니다.  
+# <a name="leading-3939-or-3939-cannot-appear-in-a-constant-expression"></a>선행 &#39;입니다. &#39; 또는 &#39;! &#39; 는 상수 식에 표시할 수 없습니다.
+멤버 액세스 (.) 및 사전 멤버 액세스 (!) 대부분의 경우 상수 식을 포함 하 여 멤버를 포함 하는 요소를 지정 하는 식이 필요 합니다. 다음 선언은 올바르지 않습니다.  
   
 ```  
 ' Not valid.  
@@ -30,5 +30,5 @@ Const c As String = .name
   
 ## <a name="see-also"></a>참고 항목  
  [개체 이니셜라이저: 명명된 형식과 익명 형식](../../visual-basic/programming-guide/language-features/objects-and-classes/object-initializers-named-and-anonymous-types.md)  
- [방법: 익명 형식 (Visual Basic)의 인스턴스를 선언](http://msdn.microsoft.com/library/119f616c-9bcd-4731-ac00-4285be5959f7)  
+ [방법: 익명 형식 (Visual Basic)의 인스턴스를 선언 합니다.](https://msdn.microsoft.com/library/119f616c-9bcd-4731-ac00-4285be5959f7)  
  [Const 문](../../visual-basic/language-reference/statements/const-statement.md)
