--- a/docs/visual-basic/misc/bc31028.md
+++ b/docs/visual-basic/misc/bc31028.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31028
 ms.assetid: 2cb22e75-5ee2-4e07-afc0-680a0bd543d4
-ms.openlocfilehash: 7827826f157b27fe80f87dbd561dfe569e665f3e
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: ddc98907288b500ae7aa13b8a4439442d7a2742d
+ms.sourcegitcommit: a368166a51e5204c0224fbf5e46476e3ed122817
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33619719"
+ms.lasthandoff: 08/31/2018
+ms.locfileid: "43331672"
 ---
 # <a name="unable-to-sign-file-39ltfilenamegt39-lterrorgt"></a>파일에 서명할 수 없습니다 &#39; &lt;filename&gt;&#39;: &lt;오류&gt;
 지정된 파일에 서명하는 동안 오류가 발생했습니다. 이 오류가 발생한 이유는 여러 가지가 있을 수 있습니다.  
@@ -36,5 +36,5 @@ ms.locfileid: "33619719"
 3.  파일에 대한 `Write` 권한이 있는지 확인합니다.  
   
 ## <a name="see-also"></a>참고 항목  
- [파일 서명 도구 (Signcode.exe)](http://msdn.microsoft.com/library/2d299154-34ea-41ba-ad12-17075bb7e1db)  
- [배포 및 Authenticode 서명을](http://msdn.microsoft.com/library/ecc3f059-da2e-445b-9b87-5b2978e2f8b2)
+ [서명 도구 (Signcode.exe) 파일](https://msdn.microsoft.com/library/2d299154-34ea-41ba-ad12-17075bb7e1db)  
+ [배포 및 Authenticode 서명](https://msdn.microsoft.com/library/ecc3f059-da2e-445b-9b87-5b2978e2f8b2)
