--- a/docs/visual-basic/misc/bc31121.md
+++ b/docs/visual-basic/misc/bc31121.md
@@ -1,5 +1,5 @@
 ---
-title: '&#39;사용자 지정&#39; 한정자 인터페이스에 선언 된 이벤트에서 유효 하지 않습니다.'
+title: '&#39;사용자 지정&#39; 한정자 인터페이스에서 선언 된 이벤트에 올바르지 않습니다.'
 ms.date: 07/20/2015
 f1_keywords:
 - bc31121
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC31121
 ms.assetid: b5687034-a2b2-4961-88b7-0ba73023573e
-ms.openlocfilehash: 13e3eaaf368b60c5489f1b69a139fee8150730af
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 231ca922df4d14d373ee5e5dd243e9297a4029a5
+ms.sourcegitcommit: a368166a51e5204c0224fbf5e46476e3ed122817
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33621390"
+ms.lasthandoff: 08/31/2018
+ms.locfileid: "43331348"
 ---
-# <a name="39custom39-modifier-is-not-valid-on-events-declared-in-interfaces"></a>&#39;사용자 지정&#39; 한정자 인터페이스에 선언 된 이벤트에서 유효 하지 않습니다.
+# <a name="39custom39-modifier-is-not-valid-on-events-declared-in-interfaces"></a>&#39;사용자 지정&#39; 한정자 인터페이스에서 선언 된 이벤트에 올바르지 않습니다.
 사용자 지정 이벤트는 `AddHandler`, `RemoverHandler`및 `RaiseEvent` 메서드의 구현을 제공해야 하므로 인터페이스에서 선언할 수 없습니다.  
   
  이벤트를 구현하는 파생 클래스에서 `Custom` 키워드를 사용할 수 있습니다.  
@@ -31,7 +31,7 @@ ms.locfileid: "33621390"
  [!code-vb[VbVbalrEventError#3](../../visual-basic/language-reference/error-messages/codesnippet/VisualBasic/bc31121_1.vb)]  
   
 ## <a name="see-also"></a>참고 항목  
- [Custom-삭제](http://msdn.microsoft.com/library/dc62be07-c896-4866-a533-982a661d143f)  
+ [사용자 지정-삭제](https://msdn.microsoft.com/library/dc62be07-c896-4866-a533-982a661d143f)  
  [Event 문](../../visual-basic/language-reference/statements/event-statement.md)  
  [Delegate 문](../../visual-basic/language-reference/statements/delegate-statement.md)  
  [Class 문](../../visual-basic/language-reference/statements/class-statement.md)  
