--- a/docs/visual-basic/misc/bc30649.md
+++ b/docs/visual-basic/misc/bc30649.md
@@ -8,22 +8,22 @@ helpviewer_keywords:
 - BC30649
 ms.assetid: fc44494c-9603-42ab-9780-9d2286015180
 ms.openlocfilehash: 3ae281e39b75a840c3c9f11e0850fee54cc40b88
-ms.sourcegitcommit: fe02afbc39e78afd78cc6050e4a9c12a75f579f8
+ms.sourcegitcommit: a368166a51e5204c0224fbf5e46476e3ed122817
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 08/30/2018
-ms.locfileid: "43254243"
+ms.lasthandoff: 08/31/2018
+ms.locfileid: "43332202"
 ---
-# <a name="39lttypenamegt39-is-an-unsupported-type"></a><span data-ttu-id="00aaa-102">&#39;&lt;typename&gt; &#39; 은 지원 되지 않는 형식</span><span class="sxs-lookup"><span data-stu-id="00aaa-102">&#39;&lt;typename&gt;&#39; is an unsupported type</span></span>
-<span data-ttu-id="00aaa-103">Visual Studio에서 지정 된 형식을 표시할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="00aaa-103">The type specified cannot be represented by Visual Studio.</span></span>  
+# <a name="39lttypenamegt39-is-an-unsupported-type"></a><span data-ttu-id="9c47b-102">&#39;&lt;typename&gt; &#39; 은 지원 되지 않는 형식</span><span class="sxs-lookup"><span data-stu-id="9c47b-102">&#39;&lt;typename&gt;&#39; is an unsupported type</span></span>
+<span data-ttu-id="9c47b-103">Visual Studio에서 지정 된 형식을 표시할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="9c47b-103">The type specified cannot be represented by Visual Studio.</span></span>  
   
- <span data-ttu-id="00aaa-104">**오류 ID:** BC30649</span><span class="sxs-lookup"><span data-stu-id="00aaa-104">**Error ID:** BC30649</span></span>  
+ <span data-ttu-id="9c47b-104">**오류 ID:** BC30649</span><span class="sxs-lookup"><span data-stu-id="9c47b-104">**Error ID:** BC30649</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="00aaa-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="00aaa-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="9c47b-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="9c47b-105">To correct this error</span></span>  
   
--   <span data-ttu-id="00aaa-106">지원되는 형식을 사용합니다.</span><span class="sxs-lookup"><span data-stu-id="00aaa-106">Use a supported type.</span></span>  
+-   <span data-ttu-id="9c47b-106">지원되는 형식을 사용합니다.</span><span class="sxs-lookup"><span data-stu-id="9c47b-106">Use a supported type.</span></span>  
   
--   <span data-ttu-id="00aaa-107">새 형식을 개발합니다.</span><span class="sxs-lookup"><span data-stu-id="00aaa-107">Develop a new type.</span></span>  
+-   <span data-ttu-id="9c47b-107">새 형식을 개발합니다.</span><span class="sxs-lookup"><span data-stu-id="9c47b-107">Develop a new type.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="00aaa-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="00aaa-108">See Also</span></span>  
- [<span data-ttu-id="00aaa-109">데이터 형식</span><span class="sxs-lookup"><span data-stu-id="00aaa-109">Data Types</span></span>](../../visual-basic/language-reference/data-types/index.md)
+## <a name="see-also"></a><span data-ttu-id="9c47b-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="9c47b-108">See Also</span></span>  
+ [<span data-ttu-id="9c47b-109">데이터 형식</span><span class="sxs-lookup"><span data-stu-id="9c47b-109">Data Types</span></span>](../../visual-basic/language-reference/data-types/index.md)
