--- a/docs/visual-basic/misc/bc30995.md
+++ b/docs/visual-basic/misc/bc30995.md
@@ -1,5 +1,5 @@
 ---
-title: 선행 &#39;합니다. &#39; 또는 &#39;! &#39; 상수 식에 나타날 수 없습니다
+title: 선행 &#39;입니다. &#39; 또는 &#39;! &#39; 는 상수 식에 표시할 수 없습니다.
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30995
@@ -7,28 +7,28 @@ f1_keywords:
 helpviewer_keywords:
 - BC30995
 ms.assetid: eed62684-66db-4fdb-9da7-f1407a55b172
-ms.openlocfilehash: b209fa721faa3d04d5a63a69340dd75f38df127b
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: cd2959fc33bd6fdaa59393c325fd309f26e21601
+ms.sourcegitcommit: a368166a51e5204c0224fbf5e46476e3ed122817
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33619082"
+ms.lasthandoff: 08/31/2018
+ms.locfileid: "43331904"
 ---
-# <a name="leading-3939-or-3939-cannot-appear-in-a-constant-expression"></a><span data-ttu-id="f8daf-102">선행 &#39;합니다. &#39; 또는 &#39;! &#39; 상수 식에 나타날 수 없습니다</span><span class="sxs-lookup"><span data-stu-id="f8daf-102">Leading &#39;.&#39; or &#39;!&#39; cannot appear in a constant expression</span></span>
-<span data-ttu-id="f8daf-103">멤버 액세스 (.) 및 사전 멤버 액세스 (!) 대부분의 경우 상수 식을 포함 하는 멤버를 포함 하는 요소를 지정 하는 식이 필요 합니다.</span><span class="sxs-lookup"><span data-stu-id="f8daf-103">Member access (.) and dictionary member access (!) require an expression specifying the element that contains the member most of the time, including constant expressions.</span></span> <span data-ttu-id="f8daf-104">다음 선언은 올바르지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="f8daf-104">The following declaration is not valid.</span></span>  
+# <a name="leading-3939-or-3939-cannot-appear-in-a-constant-expression"></a><span data-ttu-id="dbff6-102">선행 &#39;입니다. &#39; 또는 &#39;! &#39; 는 상수 식에 표시할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="dbff6-102">Leading &#39;.&#39; or &#39;!&#39; cannot appear in a constant expression</span></span>
+<span data-ttu-id="dbff6-103">멤버 액세스 (.) 및 사전 멤버 액세스 (!) 대부분의 경우 상수 식을 포함 하 여 멤버를 포함 하는 요소를 지정 하는 식이 필요 합니다.</span><span class="sxs-lookup"><span data-stu-id="dbff6-103">Member access (.) and dictionary member access (!) require an expression specifying the element that contains the member most of the time, including constant expressions.</span></span> <span data-ttu-id="dbff6-104">다음 선언은 올바르지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="dbff6-104">The following declaration is not valid.</span></span>  
   
 ```  
 ' Not valid.  
 Const c As String = .name  
 ```  
   
- <span data-ttu-id="f8daf-105">**오류 ID:** BC30995</span><span class="sxs-lookup"><span data-stu-id="f8daf-105">**Error ID:** BC30995</span></span>  
+ <span data-ttu-id="dbff6-105">**오류 ID:** BC30995</span><span class="sxs-lookup"><span data-stu-id="dbff6-105">**Error ID:** BC30995</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="f8daf-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="f8daf-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="dbff6-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="dbff6-106">To correct this error</span></span>  
   
--   <span data-ttu-id="f8daf-107">액세스하려는 멤버를 포함하는 인스턴스를 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="f8daf-107">Specify the instance that contains the member that you want to access.</span></span>  
+-   <span data-ttu-id="dbff6-107">액세스하려는 멤버를 포함하는 인스턴스를 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="dbff6-107">Specify the instance that contains the member that you want to access.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="f8daf-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="f8daf-108">See Also</span></span>  
- [<span data-ttu-id="f8daf-109">개체 이니셜라이저: 명명된 형식과 익명 형식</span><span class="sxs-lookup"><span data-stu-id="f8daf-109">Object Initializers: Named and Anonymous Types</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/object-initializers-named-and-anonymous-types.md)  
- [<span data-ttu-id="f8daf-110">방법: 익명 형식 (Visual Basic)의 인스턴스를 선언</span><span class="sxs-lookup"><span data-stu-id="f8daf-110">How to: Declare an Instance of an Anonymous Type (Visual Basic)</span></span>](http://msdn.microsoft.com/library/119f616c-9bcd-4731-ac00-4285be5959f7)  
- [<span data-ttu-id="f8daf-111">Const 문</span><span class="sxs-lookup"><span data-stu-id="f8daf-111">Const Statement</span></span>](../../visual-basic/language-reference/statements/const-statement.md)
+## <a name="see-also"></a><span data-ttu-id="dbff6-108">참고 항목</span><span class="sxs-lookup"><span data-stu-id="dbff6-108">See Also</span></span>  
+ [<span data-ttu-id="dbff6-109">개체 이니셜라이저: 명명된 형식과 익명 형식</span><span class="sxs-lookup"><span data-stu-id="dbff6-109">Object Initializers: Named and Anonymous Types</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/object-initializers-named-and-anonymous-types.md)  
+ [<span data-ttu-id="dbff6-110">방법: 익명 형식 (Visual Basic)의 인스턴스를 선언 합니다.</span><span class="sxs-lookup"><span data-stu-id="dbff6-110">How to: Declare an Instance of an Anonymous Type (Visual Basic)</span></span>](https://msdn.microsoft.com/library/119f616c-9bcd-4731-ac00-4285be5959f7)  
+ [<span data-ttu-id="dbff6-111">Const 문</span><span class="sxs-lookup"><span data-stu-id="dbff6-111">Const Statement</span></span>](../../visual-basic/language-reference/statements/const-statement.md)
