--- a/docs/visual-basic/misc/bc31198.md
+++ b/docs/visual-basic/misc/bc31198.md
@@ -8,14 +8,14 @@ helpviewer_keywords:
 - BC31198
 ms.assetid: 97b16076-39ff-430a-9c65-073d01bcb08e
 ms.openlocfilehash: 41a138a9379cc0a87fe8bf85e51961a82257e6f7
-ms.sourcegitcommit: e614e0f3b031293e4107f37f752be43652f3f253
+ms.sourcegitcommit: a368166a51e5204c0224fbf5e46476e3ed122817
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 08/26/2018
-ms.locfileid: "42934936"
+ms.lasthandoff: 08/31/2018
+ms.locfileid: "43331750"
 ---
-# <a name="xml-literal-cannot-appear-here-unless-it-is-enclosed-in-parentheses"></a><span data-ttu-id="756bb-102">XML 리터럴은 괄호로 묶어야만 여기에 표시할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="756bb-102">XML literal cannot appear here unless it is enclosed in parentheses</span></span>
-<span data-ttu-id="756bb-103">XML 리터럴 선언이 Visual Basic 컴파일러에 모호한 수 있는 위치에 있는 식에 사용 됩니다.</span><span class="sxs-lookup"><span data-stu-id="756bb-103">An XML literal declaration is used in an expression in a location that is ambiguous to the Visual Basic compiler.</span></span> <span data-ttu-id="756bb-104">즉, Visual Basic 컴파일러를 확인할 수 없습니다 여부를 작음-(<) 문자는 비교 연산자 또는 XML 리터럴의 시작으로 의도 한 것입니다.</span><span class="sxs-lookup"><span data-stu-id="756bb-104">That is, the Visual Basic compiler cannot determine whether the less-than character (<) is intended as a comparative operator or the start of an XML literal.</span></span> <span data-ttu-id="756bb-105">다음 코드는 예제를 제공합니다.</span><span class="sxs-lookup"><span data-stu-id="756bb-105">The following code provides an example:</span></span>  
+# <a name="xml-literal-cannot-appear-here-unless-it-is-enclosed-in-parentheses"></a><span data-ttu-id="8ffa0-102">XML 리터럴은 괄호로 묶어야만 여기에 표시할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="8ffa0-102">XML literal cannot appear here unless it is enclosed in parentheses</span></span>
+<span data-ttu-id="8ffa0-103">XML 리터럴 선언이 Visual Basic 컴파일러에 모호한 수 있는 위치에 있는 식에 사용 됩니다.</span><span class="sxs-lookup"><span data-stu-id="8ffa0-103">An XML literal declaration is used in an expression in a location that is ambiguous to the Visual Basic compiler.</span></span> <span data-ttu-id="8ffa0-104">즉, Visual Basic 컴파일러를 확인할 수 없습니다 여부를 작음-(<) 문자는 비교 연산자 또는 XML 리터럴의 시작으로 의도 한 것입니다.</span><span class="sxs-lookup"><span data-stu-id="8ffa0-104">That is, the Visual Basic compiler cannot determine whether the less-than character (<) is intended as a comparative operator or the start of an XML literal.</span></span> <span data-ttu-id="8ffa0-105">다음 코드는 예제를 제공합니다.</span><span class="sxs-lookup"><span data-stu-id="8ffa0-105">The following code provides an example:</span></span>  
 
 ```vb  
 ' Generates an error.  
@@ -24,11 +24,11 @@ Dim queryResult = From element In elements _
                   Select element  
 ```  
   
- <span data-ttu-id="756bb-106">**오류 ID:** BC31198</span><span class="sxs-lookup"><span data-stu-id="756bb-106">**Error ID:** BC31198</span></span>  
+ <span data-ttu-id="8ffa0-106">**오류 ID:** BC31198</span><span class="sxs-lookup"><span data-stu-id="8ffa0-106">**Error ID:** BC31198</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="756bb-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="756bb-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="8ffa0-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="8ffa0-107">To correct this error</span></span>  
   
--   <span data-ttu-id="756bb-108">다음 예제와 같이 XML 리터럴 선언을 괄호로 묶습니다.</span><span class="sxs-lookup"><span data-stu-id="756bb-108">Enclose the XML literal declaration in parentheses, as shown in the following example:</span></span>  
+-   <span data-ttu-id="8ffa0-108">다음 예제와 같이 XML 리터럴 선언을 괄호로 묶습니다.</span><span class="sxs-lookup"><span data-stu-id="8ffa0-108">Enclose the XML literal declaration in parentheses, as shown in the following example:</span></span>  
   
 ```vb  
 Dim queryResult = From element In elements _  
@@ -36,7 +36,7 @@ Dim queryResult = From element In elements _
                   Select element  
 ```  
   
--   <span data-ttu-id="756bb-109">다음 예제와 같이 기존 XML 리터럴을 가리키도록 코드를 수정합니다.</span><span class="sxs-lookup"><span data-stu-id="756bb-109">Modify your code to refer to an existing XML literal, as shown in the following example:</span></span>  
+-   <span data-ttu-id="8ffa0-109">다음 예제와 같이 기존 XML 리터럴을 가리키도록 코드를 수정합니다.</span><span class="sxs-lookup"><span data-stu-id="8ffa0-109">Modify your code to refer to an existing XML literal, as shown in the following example:</span></span>  
   
 ```vb  
 Dim queryResult = From element In elements _  
@@ -44,7 +44,7 @@ Dim queryResult = From element In elements _
                   Select element  
 ```  
   
-## <a name="see-also"></a><span data-ttu-id="756bb-110">참고 항목</span><span class="sxs-lookup"><span data-stu-id="756bb-110">See Also</span></span>  
- [<span data-ttu-id="756bb-111">XML 리터럴</span><span class="sxs-lookup"><span data-stu-id="756bb-111">XML Literals</span></span>](../../visual-basic/language-reference/xml-literals/index.md)  
- [<span data-ttu-id="756bb-112">XML 축 속성</span><span class="sxs-lookup"><span data-stu-id="756bb-112">XML Axis Properties</span></span>](../../visual-basic/language-reference/xml-axis/index.md)  
- [<span data-ttu-id="756bb-113">XML</span><span class="sxs-lookup"><span data-stu-id="756bb-113">XML</span></span>](../../visual-basic/programming-guide/language-features/xml/index.md)
+## <a name="see-also"></a><span data-ttu-id="8ffa0-110">참고 항목</span><span class="sxs-lookup"><span data-stu-id="8ffa0-110">See Also</span></span>  
+ [<span data-ttu-id="8ffa0-111">XML 리터럴</span><span class="sxs-lookup"><span data-stu-id="8ffa0-111">XML Literals</span></span>](../../visual-basic/language-reference/xml-literals/index.md)  
+ [<span data-ttu-id="8ffa0-112">XML 축 속성</span><span class="sxs-lookup"><span data-stu-id="8ffa0-112">XML Axis Properties</span></span>](../../visual-basic/language-reference/xml-axis/index.md)  
+ [<span data-ttu-id="8ffa0-113">XML</span><span class="sxs-lookup"><span data-stu-id="8ffa0-113">XML</span></span>](../../visual-basic/programming-guide/language-features/xml/index.md)
