--- a/docs/visual-basic/misc/bc36807.md
+++ b/docs/visual-basic/misc/bc36807.md
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC36807
 ms.assetid: 01c19899-2b44-41e9-a99c-35edfa0deaf1
-ms.openlocfilehash: b704a123eff3a46fc59e5eea173628236b84e8cf
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: b0012e447896c5d1eadf0616d3bae7cabe74c8f0
+ms.sourcegitcommit: a368166a51e5204c0224fbf5e46476e3ed122817
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33632732"
+ms.lasthandoff: 08/31/2018
+ms.locfileid: "43331776"
 ---
-# <a name="xml-elements-cannot-be-selected-from-type-39type39"></a><span data-ttu-id="29a47-102">형식에서 XML 요소를 선택할 수 없습니다 &#39;형식&#39;</span><span class="sxs-lookup"><span data-stu-id="29a47-102">XML elements cannot be selected from type &#39;type&#39;</span></span>
-<span data-ttu-id="29a47-103">XML 자식 요소가 <xref:System.Xml.Linq.XElement>, <xref:System.Xml.Linq.XDocument>또는 `IEnumerable(Of XElement)`형식이 아닌 개체에 대해 참조되었습니다.</span><span class="sxs-lookup"><span data-stu-id="29a47-103">An XML child element has been referenced for an object that is not of type <xref:System.Xml.Linq.XElement>, <xref:System.Xml.Linq.XDocument>, or `IEnumerable(Of XElement)`.</span></span> <span data-ttu-id="29a47-104">자세한 내용은 [XML Child Axis Property](../../visual-basic/language-reference/xml-axis/xml-child-axis-property.md)을 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="29a47-104">For more information, see [XML Child Axis Property](../../visual-basic/language-reference/xml-axis/xml-child-axis-property.md).</span></span>  
+# <a name="xml-elements-cannot-be-selected-from-type-39type39"></a><span data-ttu-id="556f1-102">형식에서 XML 요소를 선택할 수 없습니다 &#39;형식&#39;</span><span class="sxs-lookup"><span data-stu-id="556f1-102">XML elements cannot be selected from type &#39;type&#39;</span></span>
+<span data-ttu-id="556f1-103">XML 자식 요소가 <xref:System.Xml.Linq.XElement>, <xref:System.Xml.Linq.XDocument>또는 `IEnumerable(Of XElement)`형식이 아닌 개체에 대해 참조되었습니다.</span><span class="sxs-lookup"><span data-stu-id="556f1-103">An XML child element has been referenced for an object that is not of type <xref:System.Xml.Linq.XElement>, <xref:System.Xml.Linq.XDocument>, or `IEnumerable(Of XElement)`.</span></span> <span data-ttu-id="556f1-104">자세한 내용은 [XML Child Axis Property](../../visual-basic/language-reference/xml-axis/xml-child-axis-property.md)을 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="556f1-104">For more information, see [XML Child Axis Property](../../visual-basic/language-reference/xml-axis/xml-child-axis-property.md).</span></span>  
   
 ```vb  
 ' Generates an error.  
 Dim var = "sample text".<child>  
 ```  
   
- <span data-ttu-id="29a47-105">**오류 ID:** BC36807</span><span class="sxs-lookup"><span data-stu-id="29a47-105">**Error ID:** BC36807</span></span>  
+ <span data-ttu-id="556f1-105">**오류 ID:** BC36807</span><span class="sxs-lookup"><span data-stu-id="556f1-105">**Error ID:** BC36807</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="29a47-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="29a47-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="556f1-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="556f1-106">To correct this error</span></span>  
   
--   <span data-ttu-id="29a47-107">특성을 참조하는 개체가 <xref:System.Xml.Linq.XElement>, <xref:System.Xml.Linq.XDocument>또는 `IEnumerable(Of XElement)`로 강력하게 형식화되었는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="29a47-107">Ensure that the object of which you are referencing an attribute is strongly typed as <xref:System.Xml.Linq.XElement>, <xref:System.Xml.Linq.XDocument>, or `IEnumerable(Of XElement)`.</span></span> <span data-ttu-id="29a47-108">예를 들면 다음과 같습니다.</span><span class="sxs-lookup"><span data-stu-id="29a47-108">Following is an example:</span></span>  
+-   <span data-ttu-id="556f1-107">특성을 참조하는 개체가 <xref:System.Xml.Linq.XElement>, <xref:System.Xml.Linq.XDocument>또는 `IEnumerable(Of XElement)`로 강력하게 형식화되었는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="556f1-107">Ensure that the object of which you are referencing an attribute is strongly typed as <xref:System.Xml.Linq.XElement>, <xref:System.Xml.Linq.XDocument>, or `IEnumerable(Of XElement)`.</span></span> <span data-ttu-id="556f1-108">예를 들면 다음과 같습니다.</span><span class="sxs-lookup"><span data-stu-id="556f1-108">Following is an example:</span></span>  
   
 ```vb  
 Dim elem As XElement = <root>  
@@ -35,7 +35,7 @@ Dim elem As XElement = <root>
 Dim var = elem.<child>  
 ```  
   
-## <a name="see-also"></a><span data-ttu-id="29a47-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="29a47-109">See Also</span></span>  
- [<span data-ttu-id="29a47-110">XML Child 축 속성</span><span class="sxs-lookup"><span data-stu-id="29a47-110">XML Child Axis Property</span></span>](../../visual-basic/language-reference/xml-axis/xml-child-axis-property.md)  
- [<span data-ttu-id="29a47-111">XML 축 속성</span><span class="sxs-lookup"><span data-stu-id="29a47-111">XML Axis Properties</span></span>](../../visual-basic/language-reference/xml-axis/xml-axis-properties.md)  
- [<span data-ttu-id="29a47-112">XML</span><span class="sxs-lookup"><span data-stu-id="29a47-112">XML</span></span>](../../visual-basic/programming-guide/language-features/xml/index.md)
+## <a name="see-also"></a><span data-ttu-id="556f1-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="556f1-109">See Also</span></span>  
+ [<span data-ttu-id="556f1-110">XML Child 축 속성</span><span class="sxs-lookup"><span data-stu-id="556f1-110">XML Child Axis Property</span></span>](../../visual-basic/language-reference/xml-axis/xml-child-axis-property.md)  
+ [<span data-ttu-id="556f1-111">XML 축 속성</span><span class="sxs-lookup"><span data-stu-id="556f1-111">XML Axis Properties</span></span>](../../visual-basic/language-reference/xml-axis/index.md)  
+ [<span data-ttu-id="556f1-112">XML</span><span class="sxs-lookup"><span data-stu-id="556f1-112">XML</span></span>](../../visual-basic/programming-guide/language-features/xml/index.md)
