--- a/docs/visual-basic/misc/bc42307.md
+++ b/docs/visual-basic/misc/bc42307.md
@@ -1,5 +1,5 @@
 ---
-title: XML 주석 매개 변수 &#39; &lt;매개 변수&gt; &#39; 해당 매개 변수와 일치 하지 않는 &lt;키워드&gt; 문
+title: XML 주석 매개 변수에 &#39; &lt;매개 변수&gt; &#39; 해당 매개 변수와 일치 하지 않습니다 &lt;키워드&gt; 문
 ms.date: 07/20/2015
 f1_keywords:
 - vbc42307
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC42307
 ms.assetid: 59029afa-5c86-4e24-9823-0ffdd5805a95
-ms.openlocfilehash: aaa0dced0f8e4dd020af2744f64459a2961bd632
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 8e0f692fcdadc0a9054429f58842df34f600bb8e
+ms.sourcegitcommit: efff8f331fd9467f093f8ab8d23a203d6ecb5b60
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33634236"
+ms.lasthandoff: 09/01/2018
+ms.locfileid: "43395191"
 ---
-# <a name="xml-comment-parameter-39ltparametergt39-does-not-match-a-parameter-on-the-corresponding-ltkeywordgt-statement"></a><span data-ttu-id="acd39-102">XML 주석 매개 변수 &#39; &lt;매개 변수&gt; &#39; 해당 매개 변수와 일치 하지 않는 &lt;키워드&gt; 문</span><span class="sxs-lookup"><span data-stu-id="acd39-102">XML comment parameter &#39;&lt;parameter&gt;&#39; does not match a parameter on the corresponding &lt;keyword&gt; statement</span></span>
-<span data-ttu-id="acd39-103">XML 주석 매개 변수 \<매개 변수 >는 해당 매개 변수와 일치 하지 않는 \<키워드 > 문입니다.</span><span class="sxs-lookup"><span data-stu-id="acd39-103">XML comment parameter \<parameter> does not match a parameter on the corresponding \<keyword> statement.</span></span> <span data-ttu-id="acd39-104">XML 주석이 무시됩니다.</span><span class="sxs-lookup"><span data-stu-id="acd39-104">XML comment will be ignored.</span></span>  
+# <a name="xml-comment-parameter-39ltparametergt39-does-not-match-a-parameter-on-the-corresponding-ltkeywordgt-statement"></a><span data-ttu-id="2274c-102">XML 주석 매개 변수에 &#39; &lt;매개 변수&gt; &#39; 해당 매개 변수와 일치 하지 않습니다 &lt;키워드&gt; 문</span><span class="sxs-lookup"><span data-stu-id="2274c-102">XML comment parameter &#39;&lt;parameter&gt;&#39; does not match a parameter on the corresponding &lt;keyword&gt; statement</span></span>
+<span data-ttu-id="2274c-103">XML 주석 매개 변수에 \<매개 변수 > 해당 매개 변수와 일치 하지 않습니다 \<키워드 > 문입니다.</span><span class="sxs-lookup"><span data-stu-id="2274c-103">XML comment parameter \<parameter> does not match a parameter on the corresponding \<keyword> statement.</span></span> <span data-ttu-id="2274c-104">XML 주석이 무시됩니다.</span><span class="sxs-lookup"><span data-stu-id="2274c-104">XML comment will be ignored.</span></span>  
   
- <span data-ttu-id="acd39-105">XML 주석 태그가 메서드의 모든 매개 변수가 아닌 일부 매개 변수에 대해 지정되었습니다.</span><span class="sxs-lookup"><span data-stu-id="acd39-105">An XML comment tag was specified for some but not all parameters in a method.</span></span>  
+ <span data-ttu-id="2274c-105">XML 주석 태그가 메서드의 모든 매개 변수가 아닌 일부 매개 변수에 대해 지정되었습니다.</span><span class="sxs-lookup"><span data-stu-id="2274c-105">An XML comment tag was specified for some but not all parameters in a method.</span></span>  
   
- <span data-ttu-id="acd39-106">**오류 ID:** BC42307</span><span class="sxs-lookup"><span data-stu-id="acd39-106">**Error ID:** BC42307</span></span>  
+ <span data-ttu-id="2274c-106">**오류 ID:** BC42307</span><span class="sxs-lookup"><span data-stu-id="2274c-106">**Error ID:** BC42307</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="acd39-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="acd39-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="2274c-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="2274c-107">To correct this error</span></span>  
   
--   <span data-ttu-id="acd39-108">메서드의 모든 매개 변수에 대해 XML 주석 태그를 제공합니다.</span><span class="sxs-lookup"><span data-stu-id="acd39-108">Provide the XML comment tag for all parameters in the method.</span></span>  
+-   <span data-ttu-id="2274c-108">메서드의 모든 매개 변수에 대해 XML 주석 태그를 제공합니다.</span><span class="sxs-lookup"><span data-stu-id="2274c-108">Provide the XML comment tag for all parameters in the method.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="acd39-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="acd39-109">See Also</span></span>  
- [<span data-ttu-id="acd39-110">XML 주석 태그</span><span class="sxs-lookup"><span data-stu-id="acd39-110">XML Comment Tags</span></span>](../../visual-basic/language-reference/xmldoc/recommended-xml-tags-for-documentation-comments.md)  
- [<span data-ttu-id="acd39-111">코드를 XML로 문서화</span><span class="sxs-lookup"><span data-stu-id="acd39-111">Documenting Your Code with XML</span></span>](../../visual-basic/programming-guide/program-structure/documenting-your-code-with-xml.md)
+## <a name="see-also"></a><span data-ttu-id="2274c-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="2274c-109">See Also</span></span>  
+ [<span data-ttu-id="2274c-110">XML 주석 태그</span><span class="sxs-lookup"><span data-stu-id="2274c-110">XML Comment Tags</span></span>](../../visual-basic/language-reference/xmldoc/index.md)  
+ [<span data-ttu-id="2274c-111">코드를 XML로 문서화</span><span class="sxs-lookup"><span data-stu-id="2274c-111">Documenting Your Code with XML</span></span>](../../visual-basic/programming-guide/program-structure/documenting-your-code-with-xml.md)
