--- a/docs/visual-basic/misc/bc42308.md
+++ b/docs/visual-basic/misc/bc42308.md
@@ -8,23 +8,23 @@ helpviewer_keywords:
 - BC42308
 ms.assetid: ff619982-84ef-44c4-8be0-b65e43099af1
 ms.openlocfilehash: d8cd8da2ba37557bfca4365fb6cf64758e77a36c
-ms.sourcegitcommit: e614e0f3b031293e4107f37f752be43652f3f253
+ms.sourcegitcommit: efff8f331fd9467f093f8ab8d23a203d6ecb5b60
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 08/26/2018
-ms.locfileid: "42933718"
+ms.lasthandoff: 09/01/2018
+ms.locfileid: "43391830"
 ---
-# <a name="xml-comment-parameter-must-have-a-39name39-attribute"></a><span data-ttu-id="87096-102">XML 주석 매개 변수는 &#39;이름&#39; 특성</span><span class="sxs-lookup"><span data-stu-id="87096-102">XML comment parameter must have a &#39;name&#39; attribute</span></span>
-<span data-ttu-id="87096-103">XML 주석 매개 변수에는 'name' 특성이 있어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="87096-103">XML comment parameter must have a 'name' attribute.</span></span> <span data-ttu-id="87096-104">XML 주석이 무시됩니다.</span><span class="sxs-lookup"><span data-stu-id="87096-104">XML comment will be ignored.</span></span>  
+# <a name="xml-comment-parameter-must-have-a-39name39-attribute"></a><span data-ttu-id="d3256-102">XML 주석 매개 변수는 &#39;이름&#39; 특성</span><span class="sxs-lookup"><span data-stu-id="d3256-102">XML comment parameter must have a &#39;name&#39; attribute</span></span>
+<span data-ttu-id="d3256-103">XML 주석 매개 변수에는 'name' 특성이 있어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="d3256-103">XML comment parameter must have a 'name' attribute.</span></span> <span data-ttu-id="d3256-104">XML 주석이 무시됩니다.</span><span class="sxs-lookup"><span data-stu-id="d3256-104">XML comment will be ignored.</span></span>  
   
- <span data-ttu-id="87096-105">XML 태그에서 필요한 `name` 특성이 누락되었습니다.</span><span class="sxs-lookup"><span data-stu-id="87096-105">The XML tag is missing a required `name` attribute.</span></span>  
+ <span data-ttu-id="d3256-105">XML 태그에서 필요한 `name` 특성이 누락되었습니다.</span><span class="sxs-lookup"><span data-stu-id="d3256-105">The XML tag is missing a required `name` attribute.</span></span>  
   
- <span data-ttu-id="87096-106">**오류 ID:** BC42308</span><span class="sxs-lookup"><span data-stu-id="87096-106">**Error ID:** BC42308</span></span>  
+ <span data-ttu-id="d3256-106">**오류 ID:** BC42308</span><span class="sxs-lookup"><span data-stu-id="d3256-106">**Error ID:** BC42308</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="87096-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="87096-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="d3256-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="d3256-107">To correct this error</span></span>  
   
--   <span data-ttu-id="87096-108">태그에 필요한 `name` 특성을 제공합니다.</span><span class="sxs-lookup"><span data-stu-id="87096-108">Provide the required `name` attribute for the tag.</span></span>  
+-   <span data-ttu-id="d3256-108">태그에 필요한 `name` 특성을 제공합니다.</span><span class="sxs-lookup"><span data-stu-id="d3256-108">Provide the required `name` attribute for the tag.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="87096-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="87096-109">See Also</span></span>  
- [<span data-ttu-id="87096-110">XML 주석 태그</span><span class="sxs-lookup"><span data-stu-id="87096-110">XML Comment Tags</span></span>](../../visual-basic/language-reference/xmldoc/index.md)  
- [<span data-ttu-id="87096-111">코드를 XML로 문서화</span><span class="sxs-lookup"><span data-stu-id="87096-111">Documenting Your Code with XML</span></span>](../../visual-basic/programming-guide/program-structure/documenting-your-code-with-xml.md)
+## <a name="see-also"></a><span data-ttu-id="d3256-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="d3256-109">See Also</span></span>  
+ [<span data-ttu-id="d3256-110">XML 주석 태그</span><span class="sxs-lookup"><span data-stu-id="d3256-110">XML Comment Tags</span></span>](../../visual-basic/language-reference/xmldoc/index.md)  
+ [<span data-ttu-id="d3256-111">코드를 XML로 문서화</span><span class="sxs-lookup"><span data-stu-id="d3256-111">Documenting Your Code with XML</span></span>](../../visual-basic/programming-guide/program-structure/documenting-your-code-with-xml.md)
