--- a/docs/visual-basic/misc/bc42101.md
+++ b/docs/visual-basic/misc/bc42101.md
@@ -1,21 +1,22 @@
 ---
-title: '&#39;Microsoft.VisualBasic.ComClassAttribute&#39; 클래스에 &#39; &lt;classname&gt; &#39; 암시적으로 선언 &lt;형식&gt; &#39; &lt;membername&gt; &#39;에 동일한 이름의 멤버와 충돌 하는 &lt;형식&gt; &#39; &lt;typename&gt;&#39;'
+title: '&#39;Microsoft.VisualBasic.ComClassAttribute&#39; 클래스의 &#39; &lt;classname&gt; &#39; 를 암시적으로 선언 &lt;형식&gt; &#39; &lt;membername&gt; &#39;에 있는 동일한 이름의 멤버와 충돌 하는 &lt;종류&gt; &#39; &lt;typename&gt;&#39;'
 ms.date: 07/20/2015
 helpviewer_keywords:
 - BC42101
 ms.assetid: 001c8eaa-19b6-44fa-8056-4186ecffbda8
-ms.openlocfilehash: e5fbf13fc689eec7a7f7933a70bfa974c54a45c7
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 8172e5893044af3a3048c94b5c768e39f616e5ed
+ms.sourcegitcommit: efff8f331fd9467f093f8ab8d23a203d6ecb5b60
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
+ms.lasthandoff: 09/02/2018
+ms.locfileid: "43464168"
 ---
-# <a name="39microsoftvisualbasiccomclassattribute39-on-class-39ltclassnamegt39-implicitly-declares-lttypegt-39ltmembernamegt39-which-conflicts-with-a-member-of-the-same-name-in-lttypegt-39lttypenamegt39"></a>&#39;Microsoft.VisualBasic.ComClassAttribute&#39; 클래스에 &#39; &lt;classname&gt; &#39; 암시적으로 선언 &lt;형식&gt; &#39; &lt;membername&gt; &#39;에 동일한 이름의 멤버와 충돌 하는 &lt;형식&gt; &#39; &lt;typename&gt;&#39;
-클래스에 ' Microsoft.VisualBasic.ComClassAttribute'\<n a m e >'를 암시적으로 선언 \<유형 > '\<membername >'에 동일한 이름의 멤버와 충돌 하는 \<형식 > '\< 형식 이름 >'입니다. 기본 이름을 숨기려는 경우 'Microsoft.VisualBasic.ComClassAttribute(InterfaceShadows:=True)'를 사용 하 여 '\<형식 이름 >'입니다.  
+# <a name="39microsoftvisualbasiccomclassattribute39-on-class-39ltclassnamegt39-implicitly-declares-lttypegt-39ltmembernamegt39-which-conflicts-with-a-member-of-the-same-name-in-lttypegt-39lttypenamegt39"></a>&#39;Microsoft.VisualBasic.ComClassAttribute&#39; 클래스의 &#39; &lt;classname&gt; &#39; 를 암시적으로 선언 &lt;형식&gt; &#39; &lt;membername&gt; &#39;에 있는 동일한 이름의 멤버와 충돌 하는 &lt;종류&gt; &#39; &lt;typename&gt;&#39;
+'Microsoft.VisualBasic.ComClassAttribute' 클래스 '\<classname >' 암시적으로 선언 \<유형 > '\<membername >'에 있는 동일한 이름의 멤버와 충돌 하는 \<유형 > '\< 형식 이름 >'입니다. 기본 이름은 숨기려는 경우 'Microsoft.VisualBasic.ComClassAttribute(InterfaceShadows:=True)'를 사용 하 여 '\<typename >'입니다.  
   
  `COMClassAttribute` 특성 블록을 사용하는 클래스가 동일한 이름을 기본 클래스의 멤버로 지정하여 인터페이스를 암시적으로 정의합니다. 이 경우 인터페이스 이름이 기본 클래스 멤버를 숨겨야 합니다.  
   
- 이 메시지는 기본적으로 경고입니다. 경고를 숨기 거 나 경고를 오류로 처리 하는 방법에 대 한 자세한 내용은 참조 하십시오. [Visual Basic에서 경고 구성](/visualstudio/ide/configuring-warnings-in-visual-basic)합니다.  
+ 이 메시지는 기본적으로 경고입니다. 경고를 숨기 거 나 오류로 처리 경고 하는 방법에 대 한 자세한 내용은 참조 하세요. [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)합니다.  
   
  **오류 ID:** BC42101  
   
@@ -28,5 +29,5 @@ ms.lasthandoff: 05/04/2018
 ## <a name="see-also"></a>참고 항목  
    
    
- [ComClassAttribute 클래스](http://msdn.microsoft.com/library/5c2f0835-9210-47dc-bc59-5c1769953574)  
- [ComClassAttribute.InterfaceShadows 속성](http://msdn.microsoft.com/library/0fae25bd-e0ba-4755-a76c-3b526b1ac795)
+ [ComClassAttribute 클래스](https://msdn.microsoft.com/library/5c2f0835-9210-47dc-bc59-5c1769953574)  
+ [ComClassAttribute.InterfaceShadows 속성](https://msdn.microsoft.com/library/0fae25bd-e0ba-4755-a76c-3b526b1ac795)
